        Reviewed by Dave Hyatt.

- fix http://bugs.webkit.org/show_bug.cgi?id=18311
          <rdar://problem/5842980> REGRESSION (r31620): Font variants (e.g. Helvetica Neue *Light*) don't render correctly

        * platform/mac/WebFontCache.mm:
        (+[WebFontCache internalFontWithFamily:traits:weight:size:]): Changed to
        match by family name first, and only if that fails, look for a match by
        full (PostScript) name. Reverted the full name-based match logic to only
        distinguish between the broad categories of "bold" and "not bold".



Canonical link: https://commits.webkit.org/25252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31689 268f45cc-cd09-0410-ab3c-d52691b4dbfc